--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "node": "10.16.0"
   },
   "dependencies": {
+    "rootpath": "^0.1.2",
     "express": "^4.17.1",
-    "mongodb": "^3.3.0-beta2",
+    "mongodb": "^3.3.0",
     "mongoose": "^5.6.7",
     "node-dht-sensor": "^0.3.0",
     "onoff": "^4.1.3",
